[Feat] Add Swagger for auth handler
