# internal/router/auth/router.go
@@ -2,22 +2,28 @@ package auth
 
 import (
 	"encoding/json"
-	"fmt"
+	"errors"
 	"net/http"
 
 	"github.com/Xenous-Inc/finapp-api/internal/clients"
 	"github.com/Xenous-Inc/finapp-api/internal/clients/orgfaclient"
 	"github.com/Xenous-Inc/finapp-api/internal/dto"
+	"github.com/Xenous-Inc/finapp-api/internal/router/utils/responser"
 	"github.com/go-chi/chi"
+	"github.com/google/uuid"
+	"gopkg.in/go-playground/validator.v9"
 )
 
 type Router struct {
 	client *orgfaclient.Client
+
+	validator *validator.Validate
 }
 
 func NewRouter(client *orgfaclient.Client) *Router {
 	return &Router{
-		client: client,
+		client:    client,
+		validator: validator.New(),
 	}
 }
 
@@ -25,27 +31,49 @@ func (s *Router) Route(r chi.Router) {
 	r.Post("/login", s.HandleAuth)
 }
 
+// @Summary Try to sign in user
+// @Description In success case returns Access JWT Token
+// @Tags auth
+// @Param data body dto.LoginRequest true "Credentials input"
+// @Produce json
+// @Success 200 {object} []dto.LoginResponse
+// @Failure 401 {object} dto.ApiError
+// @Failure 400 {object} dto.ApiError
+// @Failure 500 {object} dto.ApiError
+// @Router /auth/login [post]
 func (s *Router) HandleAuth(w http.ResponseWriter, r *http.Request) {
-	var input *dto.LoginRequest
+	input := new(dto.LoginRequest)
 	if err := json.NewDecoder(r.Body).Decode(&input); err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
 
-	sessionId, err := s.client.Login(&orgfaclient.LoginInput{
+	err := s.validator.Struct(input)
+	if err != nil {
+		responser.BadRequset(w, r, "Password and login must be provided")
+
+		return
+	}
+
+	_, err = s.client.Login(&orgfaclient.LoginInput{
 		Login:    input.Login,
 		Password: input.Password,
 	})
-
 	if err != nil {
-		fmt.Fprintf(w, "auth:  %s", clients.ErrRequest)
+		if errors.Is(err, clients.ErrUnauthorized) {
+			responser.Unauthorized(w, r)
+
+			return
+		}
+
+		responser.Internal(w, r, err.Error())
+
+		return
 	}
 
-	res, err := json.Marshal(sessionId)
-
-	if err != nil {
-		fmt.Fprintf(w, "auth marshal:  %s", clients.ErrRequest)
+	response := &dto.LoginResponse{
+		AccessToken: uuid.NewString(), // TODO: Genereate token
 	}
 
-	fmt.Fprintf(w, string(res))
+	responser.Success(w, r, response)
 }
